# planty

./: .dockerignore  .env.dev.sample  .env.sample  .gitattributes  .gitignore  Caddyfile  Dockerfile.backend  README.md  check.sh  compose.dev.yaml  compose.yaml  pyproject.toml
.github/workflows/: on-push.yml  pytest.yml
alembic/: env.py
alembic/versions/: 8c2e68301fff_.py  c8da5bde10fd_initial_migration.py  e99e87b2e1c8_.py  f599d12da503_.py  fc10a59437bf_.py
frontend/: .dockerignore  .eslintignore  .gitignore  Dockerfile.frontend  README.md  next.config.mjs  openapi.json  package-lock.json  package.json
frontend/api/: Api.ts  api-calls.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(main)/: layout.tsx
frontend/app/(main)/archived/: page.tsx
frontend/app/(main)/calendar/: page.tsx
frontend/app/section/[id]/: page.tsx
frontend/app/services/: taskService.tsx
frontend/components/: app-sidebar.tsx  calendar-view.tsx  login-form.tsx  logo.tsx  main-sidebar-wrapper.tsx  nav-secondary.tsx  nav-sections.tsx  no-section-selected.tsx  simple-icon.tsx  user-profile.tsx
frontend/components/left-panel/: app-sidebar.tsx  create-section-dialog.tsx  edit-section-dialog.tsx  logo.tsx  main-sidebar-wrapper.tsx  move-section-dialog.tsx  nav-main.tsx  nav-secondary.tsx  nav-sections.tsx  section-dialog-form.tsx  section-edit-dialog-form.tsx  section-move-dialog-form.tsx  user-profile.tsx
frontend/components/tasks/: add-task-dialog.tsx  date-label.tsx  edit-task-dialog.tsx  move-task-dialog.tsx  move-task-to-section-form.tsx  section.tsx  task-context-menu.tsx  task-dialog-form.tsx  task-list.tsx  task.tsx
frontend/components/ui/: calendar.tsx  sidebar.tsx
frontend/hooks/: fetcher.tsx  use-auth-redirect.tsx  use-section.tsx  use-sections.tsx  use-tasks-by-date.tsx  use-user.tsx
frontend/nextjs/: .gitignore  package-lock.json  package.json
frontend/nextjs/app/: globals.css  layout.tsx  page.tsx
frontend/nextjs/components/: app-sidebar.tsx  logo.tsx  nav-sections.tsx  simple-icon.tsx
frontend/nextjs/components/tasks/: task-list.tsx  task.tsx
frontend/nextjs/components/ui/: sidebar.tsx
frontend/nextjs/hooks/: use-sections.tsx
frontend/public/: index.html
frontend/src/: App.vue
frontend/vue/: vue.config.js
frontend/vue/src/: App.vue  prompt_generator.py
frontend/vue/src/components/: SectionComponent.vue  TaskComponent.vue  TaskModalComponent.vue
planty/: config.py  conftest.py  database.py  main.py  utils.py
planty/application/: auth.py  exceptions.py  router.py  schemas.py  services.py  uow.py
planty/application/services/: admin.py  attachments.py  responses_converter.py  stats.py  tasks.py  user_manager.py
planty/application/templates/: verify_user.html
planty/application/tests/: conftest.py  db_data.json  test_endpoints.py  test_minio.html  test_section_service.py  test_task_service.py
planty/domain/: calendar.py  entities.py  exceptions.py  services.py  task.py  types.py
planty/domain/tests/: conftest.py  test_calendar.py  test_section_entity.py  test_task_entity.py  test_tasks.py
planty/infrastructure/: database.py  models.py  repositories.py  utils.py
planty/infrastructure/tests/: conftest.py  test_repository.py
planty/resources/: additional_data.json  create_test_db.sql  data.json  db_data.json
planty/scripts/: create_admin.py
planty/tasks/: entities.py  models.py  repositories.py  router.py  services.py
planty/tasks/application/: router.py  schemas.py  services.py
planty/tasks/domain/: entities.py  repositories.py
planty/tasks/domain/tests/: test_task_entity.py
planty/tasks/infrastructure/: models.py  repositories.py
planty/tests/: create_test_db.sql
utils/: generate_fief_env.py
(+1 files in other folders)
