[tool.poetry]
name = "planty"
version = "0.1.0"
description = "Task management system"
authors = ["m-danya <danila-mikh@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.110.0"}
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
loguru = "^0.7.2"
gunicorn = "^21.2.0"
aiosqlite = "^0.20.0"
mypy = "^1.10.0"
coverage = "^7.6.1"
python-dateutil = "^2.9.0.post0"
types-python-dateutil = "^2.9.0.20240906"
aiobotocore = "^2.15.1"
types-aiobotocore = {extras = ["s3"], version = "^2.15.1"}
docker = "^7.1.0"
types-docker = "^7.1.0.20240827"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
httpx = "^0.27.0"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Do not hide stdout while running tests
addopts = "-s -v"
filterwarnings = [
    # This's triggered by pytest-asyncio,
    # which calls deprecated asyncio.get_event_loop() method
    # ref: https://github.com/pytest-dev/pytest-asyncio/issues/757
    "ignore:There is no current event loop",
]

[tool.ruff]
extend-exclude = ["alembic/versions"]

[tool.mypy]
explicit_package_bases = true
strict = true
allow_redefinition = true
exclude = "alembic/"
plugins =  ["pydantic.mypy"]

[tool.coverage.run]
concurrency = ["greenlet", "thread"]